Production-ready backend + Fly.io config